@@ -1,13 +1,13 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gjs/gjs-1.30.0.ebuild,v 1.2 2011/11/15 09:06:58 nirbheek Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gjs/gjs-1.32.0.ebuild,v 1.1 2012/03/28 01:00:26 tetromino Exp $
 
 EAPI="4"
 GCONF_DEBUG="no"
 GNOME2_LA_PUNT="yes"
 PYTHON_DEPEND="2"
 
-inherit gnome2 python virtualx
+inherit gnome2 pax-utils python virtualx
 
 DESCRIPTION="Javascript bindings for GNOME"
 HOMEPAGE="http://live.gnome.org/Gjs"
@@ -17,8 +17,8 @@ SLOT="0"
 IUSE="examples test"
 KEYWORDS="~amd64 ~x86"
 
-RDEPEND=">=dev-libs/glib-2.18:2
-	>=dev-libs/gobject-introspection-1.29.16
+RDEPEND=">=dev-libs/glib-2.31:2
+	>=dev-libs/gobject-introspection-1.31.22
 
 	dev-libs/dbus-glib
 	sys-libs/readline
@@ -35,7 +35,6 @@ pkg_setup() {
 	# FIXME: --enable-systemtap installs files in ${D}/${D} for some reason
 	# XXX: Do NOT enable coverage, completely useless for portage installs
 	G2CONF="${G2CONF}
-		--with-js-package=mozjs185
 		--disable-systemtap
 		--disable-dtrace
 		--disable-coverage"
@@ -51,7 +50,7 @@ src_prepare() {
 
 src_test() {
 	# Tests need dbus
-	Xemake check || die
+	Xemake check
 }
 
 src_install() {
@@ -60,6 +59,9 @@ src_install() {
 
 	if use examples; then
 		insinto /usr/share/doc/${PF}/examples
-		doins ${S}/examples/* || die "doins examples failed!"
+		doins ${S}/examples/*
 	fi
+
+	# Required for gjs-console to run correctly on PaX systems
+	pax-mark mr "${ED}/usr/bin/gjs-console"
 }
