@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/gjs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gjs/ChangeLog,v 1.5 2012/01/14 04:54:24 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gjs/ChangeLog,v 1.6 2012/03/28 01:00:26 tetromino Exp $
+
+*gjs-1.32.0 (28 Mar 2012)
+
+  28 Mar 2012; Alexandre Rostovtsev <tetromino@gentoo.org> -gjs-1.30.0.ebuild,
+  +gjs-1.32.0.ebuild:
+  Version bump. Adds system module, meta classes, better out parameter support,
+  lots of bugfixes. Drop old.
 
 *gjs-1.30.1 (14 Jan 2012)
 
